add alternative adapters