@@ -3,6 +3,12 @@ package com.example.hr;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 
+/**
+ * 
+ * @author Binnur Kurt <binnur.kurt@gmail.com>
+ *
+ */
+// --add-opens java.base/java.lang=ALL-UNNAMED
 @SpringBootApplication
 public class HrMicroserviceApplication {
 
